--- a/frontend/ccp/src/App.css
+++ b/frontend/ccp/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.appContainer {
   display: flex;
+  width:100%;
+  height: 100%;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  overflow: hidden;
+  background-color: red;
+  box-shadow: 0 0 12px black;
+  border-radius: 10px;
+  background-color: rgb(36, 37, 37);
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header{
+  height:80px;
+  border-bottom-width: 1px;
+  border-color:#6d6e72;
+  color:white;
+  align-items:center;
+  display:flex;
+  justify-content:flex-start;
+  padding: 10px;
+  font-size: 30px;
 }
