--- a/frontend/ccp/src/index.css
+++ b/frontend/ccp/src/index.css
@@ -6,7 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100vw;
-  height: 100vh
+  height: 100vh;
+  /* overflow-y: hidden; */
 }
 
 code {
