--- a/frontend/ccp/src/components/forms/style.css
+++ b/frontend/ccp/src/components/forms/style.css
@@ -5,31 +5,38 @@ body{
 }
 
 .form{
-    background-color: white;
+    background-color: grey;
     border-radius: 5px;
-    width: 550px;
+    width: 35%;
+    height: 'auto';
     margin: 20px auto;
     padding: 20px;
-    /* height: 600px; */
 }
-
+.username{
+    display: flex;
+    justify-content: space-around;
+}
 .form-body{
     text-align: left;
-    padding: 20px 10px;
+    padding:10px 20px;
 }
 
 .form-body > *{
-    padding: 5px;
+    padding: 15px;
+    height: 80%;
 }
 
 .form__label{
-    width: 40%;
+    width: 60%;
 }
 
 .form_input{
-    width: 60%;
+    width: 40%;
+    left: 60px;
+    height:10px;
 }
 
 .footer{
     text-align: center;
+
 }
